Copy completion file into the pack

--- a/distribution/zip/jballerina-tools/build.gradle
+++ b/distribution/zip/jballerina-tools/build.gradle
@@ -330,6 +330,13 @@ def copyDebugAdapterLauncher = {
     }
 }
 
+def copyCompletionFile = {
+    path -> copySpec {
+        from('resources/command-completion')
+        into(path + 'resources/command-completion')
+    }
+}
+
 def copyDebugAdapterLibsSpec = {
     path -> copySpec {
         from configurations.debugAdapterLib
@@ -428,6 +435,7 @@ task createZip(type: Zip) {
     with copyBallerinaZipSpec(basePath)
     with copyDebugAdapterLibsSpec(basePath)
     with copyDebugAdapterLauncher(basePath)
+    with copyCompletionFile(basePath)
     with apiDocsSpec(basePath)
     with copyStaticSpec(basePath)
     with copyDocerinaUi(basePath)
@@ -452,6 +460,7 @@ task updateBalHome(type: Copy) {
     with copyBallerinaZipSpec(installDir)
     with copyDebugAdapterLibsSpec(installDir)
     with copyDebugAdapterLauncher(installDir)
+    with copyCompletionFile(installDir)
     with apiDocsSpec(installDir)
     with copyStaticSpec(installDir)
     with copyDocerinaUi(installDir)
@@ -478,6 +487,7 @@ task createDistribution(type: Copy) {
     with copyBallerinaZipSpec("")
     with copyDebugAdapterLibsSpec("")
     with copyDebugAdapterLauncher("")
+    with copyCompletionFile("")
     with apiDocsSpec("")
     with copyStaticSpec("")
     with copyDocerinaUi("")
