--- a/tests/jballerina-unit-test/src/test/resources/test-src/bala/test_projects/test_project/Ballerina.toml
+++ b/tests/jballerina-unit-test/src/test/resources/test-src/bala/test_projects/test_project/Ballerina.toml
@@ -2,4 +2,4 @@
 org= "testorg"
 name="foo"
 version= "1.0.0"
-export=["foo", "foo.records", "foo.dependently_typed"]
+export=["foo", "foo.records", "foo.dependently_typed", "foo.bar"]
