Improve never type support

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -495,6 +495,9 @@ error.invalid.client.remote.method.call=\
 error.never.typed.var.def.not.allowed=\
   cannot define a variable of type ''never'' or equivalent to type ''never''
 
+error.never.typed.object.field.not.allowed=\
+  cannot define an object field of type ''never'' or equivalent to type ''never''
+
 error.too.many.args.call=\
   too many arguments in call to ''{0}()''
 
