--- a/tool-plugins/vscode/package.json
+++ b/tool-plugins/vscode/package.json
@@ -329,6 +329,7 @@
         "lodash": "^4.17.11",
         "mousetrap": "^1.6.3",
         "portfinder": "^1.0.21",
+        "promise.any": "^2.0.2",
         "vscode-debugadapter": "^1.34.0",
         "vscode-debugprotocol": "^1.34.0",
         "vscode-extension-telemetry": "^0.1.2",
@@ -356,7 +357,7 @@
         "tslint": "^5.14.0",
         "typescript": "^3.3.4000",
         "vsce": "^1.59.0",
-        "vscode": "1.1.34",
+        "vscode": "1.1.37",
         "vscode-debugadapter-testsupport": "^1.35.0",
         "webpack": "^4.33.0",
         "webpack-cli": "^3.3.3"
