--- a/gradle/javaProject.gradle
+++ b/gradle/javaProject.gradle
@@ -130,6 +130,8 @@ dependencies {
         implementation 'org.jline:jline:3.11.0'
         implementation 'jakarta.activation:jakarta.activation-api:1.2.2'
         implementation 'com.github.zafarkhaja:java-semver:0.9.0'
+        implementation 'com.squareup.okhttp3:okhttp:4.9.1'
+        implementation 'com.squareup.okio:okio:2.10.0'
 
         implementation 'javax.transaction:javax.transaction-api:1.3'
         implementation 'javax.ws.rs:javax.ws.rs-api:2.1.1'
