Improve diagnostics for built-in types

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -208,6 +208,7 @@ error.missing.xml.text.content=missing xml text content
 error.missing.template.string=missing template string
 error.missing.function.name=missing function name
 error.missing.type.desc=missing type desc
+error.missing.builtin.type=missing built-in type
 error.missing.expression=missing expression
 error.missing.select.clause=missing select clause
 error.missing.receive.field.in.receive.action=missing receive field in receive action
