--- a/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/configStructuredTypes/Dependencies.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/configStructuredTypes/Dependencies.toml
@@ -3,3 +3,10 @@ org = "testOrg"
 name = "configLib"
 version = "0.1.0"
 repository = "local"
+
+[[dependency]]
+org = "ballerina"
+name = "test"
+version = "0.0.0"
+
+
