Address suggested changes

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1676,8 +1676,8 @@ error.invalid.read.only.class.inclusion.in.non.read.only.class=\
 error.invalid.field.in.object.constructor.expr.with.readonly.reference=\
   invalid field in an object constructor expression with a ''readonly'' reference: ''{0}'' can never be ''readonly''
 
-error.mismatching.visibility.qualifiers.in.object.field=\
-  mismatching visibility qualifiers in referenced object field and referencing object field ''{0}''
+error.mismatched.visibility.qualifiers.in.object.field=\
+  mismatched visibility qualifiers for field ''{0}'' in object type inclusion
 
 error.multiple.receive.action.not.yet.supported=multiple receive action not yet supported
 
