Validate dependency paths in Ballerina.toml

--- a/compiler/ballerina-lang/src/test/resources/ballerina-toml/inline-table.toml
+++ b/compiler/ballerina-lang/src/test/resources/ballerina-toml/inline-table.toml
@@ -11,7 +11,7 @@ repository= "https://github.com/ballerina-platform/ballerina-lang"
 dependency = [{path = "/user/sameera/libs/toml4j.jar", artifactId = "toml4j", version = "0.7.2", groupId = "com.moandjiezana.toml"}]
 
 [[platform.java11.dependency]]
-path = "path/to/swagger.jar"
+path = "path/to/swagger.txt"
 artifactId = "swagger"
 version = "0.7.2"
 groupId = "swagger.io"
