--- a/compiler/ballerina-lang/src/test/resources/ballerina-toml/invalid-entries.toml
+++ b/compiler/ballerina-lang/src/test/resources/ballerina-toml/invalid-entries.toml
@@ -8,13 +8,13 @@ keywords= ["toml", "ballerina"]
 repository=true
 
 [[platform.java11.dependency]]
-path = "/user/sameera/libs/toml4j.jar"
+path = "../dummy-jars/toml4j.txt"
 artifactId = "toml4j"
 version = "0.7.2"
 groupId = "com.moandjiezana.toml"
 
 [[platform.java11.dependency]]
-path = "path/to/swagger.jar"
+path = "path/to/swagger.txt"
 artifactId = "swagger"
 version = "0.7.2"
 groupId = "swagger.io"
