--- a/compiler/ballerina-lang/src/test/resources/ballerina-toml/platfoms-with-scope.toml
+++ b/compiler/ballerina-lang/src/test/resources/ballerina-toml/platfoms-with-scope.toml
@@ -8,22 +8,16 @@ keywords= ["toml", "ballerina"]
 repository= "https://github.com/ballerina-platform/ballerina-lang"
 
 [[platform.java11.dependency]]
-path = "/user/sameera/libs/toml4j.jar"
+path = "../dummy-jars/toml4j.txt"
 artifactId = "toml4j"
 version = "0.7.2"
 groupId = "com.moandjiezana.toml"
 
 [[platform.java11.dependency]]
-path = "path/to/swagger.jar"
+path = "../dummy-jars/swagger.txt"
 artifactId = "swagger"
 version = "0.7.2"
 groupId = "swagger.io"
-
-[[platform.java11.dependency]]
-artifactId = "ldap"
-version = "1.0.0"
-path = "./libs/ballerina-io-1.2.0-java.txt"
-groupId = "ballerina"
 scope = "testOnly"
 
 [build-options]
