--- a/langlib/lang.runtime/build.gradle
+++ b/langlib/lang.runtime/build.gradle
@@ -23,8 +23,8 @@ dependencies {
     implementation project(':ballerina-lang')
 
     distributionBala project(path: ':ballerina-lang:annotations', configuration: 'distributionBala')
-    distributionBala project(path: ':ballerina-lang:object', configuration: 'distributionBala')
-    distributionBala project(path: ':ballerina-lang:internal', configuration: 'distributionBala')
+//    distributionBala project(path: ':ballerina-lang:object', configuration: 'distributionBala')
+//    distributionBala project(path: ':ballerina-lang:internal', configuration: 'distributionBala')
     distributionBala project(path: ':ballerina-lang:jballerina.java', configuration: 'distributionBala')
 }
 
