--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1677,7 +1677,7 @@ error.invalid.field.in.object.constructor.expr.with.readonly.reference=\
   invalid field in an object constructor expression with a ''readonly'' reference: ''{0}'' can never be ''readonly''
 
 error.mismatched.visibility.qualifiers.in.object.field=\
-  mismatched visibility qualifiers for field ''{0}'' in object type inclusion
+  mismatched visibility qualifiers for field ''{0}'' with object type inclusion
 
 error.multiple.receive.action.not.yet.supported=multiple receive action not yet supported
 
