--- a/observelib/observe/build.gradle
+++ b/observelib/observe/build.gradle
@@ -46,12 +46,16 @@ configurations {
 }
 
 task updateVersion {
-    ant.replaceregexp(
-            file: "${projectDir}/src/main/ballerina/Ballerina.toml",
-            match: "${project.name}-(.*).jar",
-            replace: "${project.name}-${project.version}.jar"
-    )
+    doLast {
+        ant.replaceregexp(
+                file: "${project.buildDir}/ballerina-src/Ballerina.toml",
+                match: "${project.name}-(.*).jar",
+                replace: "${project.name}-${project.version}.jar"
+        )
+    }
 }
+
+copyBallerinaProject.finalizedBy(updateVersion)
 
 ballerinaLangLibBuild {
     skipBootstrap = 'true'
