--- a/stdlib/runtime-api/build.gradle
+++ b/stdlib/runtime-api/build.gradle
@@ -39,13 +39,16 @@ dependencies {
 }
 
 task updateVersion {
-    ant.replaceregexp(
-            file: "${projectDir}/src/main/ballerina/Ballerina.toml",
-            match: "${project.name}-(.*).jar",
-            replace: "${project.name}-${project.version}.jar"
-    )
+    doLast {
+        ant.replaceregexp(
+                file: "${project.buildDir}/ballerina-src/Ballerina.toml",
+                match: "${project.name}-(.*).jar",
+                replace: "${project.name}-${project.version}.jar"
+        )
+    }
 }
 
+copyBallerinaProject.finalizedBy(updateVersion)
 
 description = 'Ballerina - Runtime API'
 
