--- a/tests/observability-test-utils/build.gradle
+++ b/tests/observability-test-utils/build.gradle
@@ -69,17 +69,20 @@ shadowJar {
 }
 
 task updateVersion {
-    ant.replaceregexp(
-            file: "${projectDir}/src/main/ballerina/Ballerina.toml",
-            match: "${project.name}-(.*).jar",
-            replace: "${project.name}-${project.version}.jar"
-    )
+    doLast {
+        ant.replaceregexp(
+                file: "${project.buildDir}/ballerina-src/Ballerina.toml",
+                match: "${project.name}-(.*).jar",
+                replace: "${project.name}-${project.version}.jar"
+        )
+    }
 }
+
+copyBallerinaProject.finalizedBy(updateVersion)
 
 ballerinaLangLibBuild {
     pkgName = 'testobserve'
     dependsOn compileJava
-    dependsOn updateVersion
 }
 
 test {
