--- a/tests/jballerina-integration-test/src/test/resources/configurables/configLibProject/Ballerina.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configLibProject/Ballerina.toml
@@ -2,6 +2,7 @@
 org = "testOrg"
 name = "configLib"
 version = "0.1.0"
+export = ["configLib", "configLib.mod1"]
 
 [build-options]
 observabilityIncluded = true
