Address review suggestions

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -302,6 +302,7 @@ error.rest.arg.in.error.constructor=rest arg in error constructor
 error.additional.positional.arg.in.error.constructor=additional positional arg in error constructor
 error.missing.arg.within.parenthesis=missing arg within parenthesis
 error.missing.variable.name=missing variable name
+error.missing.field.name=missing field name
 error.missing.positional.arg.in.error.constructor=missing positional arg in error constructor
 error.open.record.cannot.contain.rest.field=open record cannot contain rest field
 error.complex.variable.must.be.initialized=complex variable must be initialized
