--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -490,7 +490,7 @@ error.never.type.not.allowed.for.required.and.defaultable.params=\
   a required parameter or a defaultable parameter cannot be of type ''never'' or equivalent to type ''never''
 
 error.invalid.client.remote.method.call=\
-  cannot call a remote method with return type ''never''
+  cannot call a remote method with return type ''never'' or equivalent to type ''never''
 
 error.never.typed.var.def.not.allowed=\
   cannot define a variable of type ''never'' or equivalent to type ''never''
