Address review suggestions

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -303,7 +303,7 @@ error.additional.positional.arg.in.error.constructor=additional positional arg i
 error.missing.arg.within.parenthesis=missing arg within parenthesis
 error.missing.variable.name=missing variable name
 error.missing.positional.arg.in.error.constructor=missing positional arg in error constructor
-error.inclusive.record.type.descriptor.cannot.contain.rest.field=inclusive record type descriptor cannot contain rest field
+error.inclusive.record.type.cannot.contain.rest.field=inclusive record type descriptor cannot contain a rest field
 error.complex.variable.must.be.initialized=complex variable must be initialized
 error.isolated.var.cannot.be.declared.as.public=isolated variable cannot be public
 error.variable.declared.with.var.cannot.be.public=variable declared with var cannot be public
