--- a/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
@@ -120,6 +120,30 @@ id = 12
 address.city="London"
 address.country.name="UK"
 
+[[configStructuredTypes.personArray1]]
+name = "waruna"
+id = 700
+address.city="Abu Dhabi"
+address.country.name="UAE"
+
+[[configStructuredTypes.personArray1]]
+name = "manu"
+id = 701
+address.city="Mumbai"
+address.country.name="India"
+
+[[configStructuredTypes.personArray2]]
+name = "gabilan"
+id = 900
+address.city="Abu Dhabi"
+address.country.name="UAE"
+
+[[configStructuredTypes.personArray2]]
+name = "hinduja"
+id = 901
+address.city="Mumbai"
+address.country.name="India"
+
 [[configStructuredTypes.personTable]]
 name = "riyafa"
 id = 13
@@ -257,6 +281,30 @@ name = "manu"
 id = 122
 address.city="Mumbai"
 address.country.name="India"
+
+[[configStructuredTypes.mod2.personArray1]]
+name = "manu"
+id = 800
+address.city="New York"
+address.country.name="USA"
+
+[[configStructuredTypes.mod2.personArray1]]
+name = "hinduja"
+id = 801
+address.city="London"
+address.country.name="UK"
+
+[[configStructuredTypes.mod2.personArray2]]
+name = "riyafa"
+id = 1000
+address.city="New York"
+address.country.name="USA"
+
+[[configStructuredTypes.mod2.personArray2]]
+name = "waruna"
+id = 1001
+address.city="London"
+address.country.name="UK"
 
 [[configStructuredTypes.mod2.personTable]]
 name = "gabilan"
