--- a/.codecov.yml
+++ b/.codecov.yml
@@ -1,5 +1,6 @@
 codecov:
   require_ci_to_pass: no
+  max_report_age: off
 
 fixes:
   - "ballerina/lang$0046*/*/::langlib/lang.*/src/main/ballerina/"
