Fix error for unsupported types in shift op

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1441,6 +1441,9 @@ error.const.expression.not.supported=\
 error.key.not.found=\
   key ''{0}'' not found in ''{1}''
 
+error.constant.declaration.not.yet.supported.for.type=\
+  constant declaration not yet supported for type ''{0}''
+
 error.invalid.use.of.experimental.feature=\
   using experimental feature ''{0}''. use ''--experimental'' flag to enable the experimental features
 
