Improve recovery for missing semicolon after expression

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -48,7 +48,7 @@ error.missing.open.bracket.token=missing open bracket token
 error.missing.close.bracket.token=missing close bracket token
 error.missing.equal.token=missing equal token
 error.missing.comma.token=missing comma token
-error.missing.plus.token=missing plus token
+error.missing.binary.operator=missing binary operator
 error.missing.slash.token=missing slash token
 error.missing.at.token=missing at token
 error.missing.question.mark.token=missing question mark token
