Modify dependent version update workflow trigger

--- a/.github/workflows/update_dependent_versions.yml
+++ b/.github/workflows/update_dependent_versions.yml
@@ -1,11 +1,7 @@
 name: Update Stdlib Repos on Version Change
 
 on:
-    push:
-        branches:
-            - master
-        paths:
-            - 'gradle.properties'
+    workflow_dispatch:
 
 jobs:
     update-stdlibs:
