Fix no error for missing variable with user-defined types

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1251,6 +1251,9 @@ error.invalid.variable.reference.in.binding.pattern=\
 error.invalid.type.for.rest.descriptor=\
   invalid rest descriptor type; expecting an array type but found ''{0}''
 
+error.invalid.variable.reference=\
+  invalid variable reference; missing variable
+
 # safe navigation operator related errors
 
 error.safe.navigation.not.required=\
