--- a/settings.gradle
+++ b/settings.gradle
@@ -70,6 +70,8 @@ include(':language-server:language-server-cli')
 include(':language-server:language-server-launchers')
 include(':language-server:language-server-test-coverage')
 include(':language-server')
+include(':language-server-extensions:http-language-server-extension')
+include(':language-server-extensions')
 include(':ballerina-shell:shell-rt')
 include(':ballerina-shell:shell-core')
 include(':ballerina-shell:shell-cli')
@@ -206,6 +208,7 @@ project(':language-server:language-server-stdio-launcher').projectDir = file('la
 project(':language-server:language-server-cli').projectDir = file('language-server/modules/langserver-cli')
 project(':language-server:language-server-launchers').projectDir = file('language-server/modules/launchers')
 project(':language-server:language-server-test-coverage').projectDir = file('language-server/modules/test-coverage')
+project(':language-server-extensions:http-language-server-extension').projectDir = file('language-server-extensions/http')
 project(':ballerina-shell:shell-rt').projectDir = file('ballerina-shell/modules/shell-rt')
 project(':ballerina-shell:shell-core').projectDir = file('ballerina-shell/modules/shell-core')
 project(':ballerina-shell:shell-cli').projectDir = file('ballerina-shell/modules/shell-cli')
