--- a/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
@@ -105,8 +105,17 @@ id=888
 [configStructuredTypes.person]
 name = "waruna"
 id = 10
-address.city="Colombo"
-address.country.name="Sri Lanka"
+address.city="San Francisco"
+address.country.name="USA"
+
+[configStructuredTypes.person2]
+name = "manu"
+id = 11
+address.city="Nugegoda"
+
+[configStructuredTypes.person3]
+name = "riyafa"
+id = 12
 
 [[configStructuredTypes.personArray]]
 name = "manu"
