Invalidate more type desc after rest type in tuple type

--- a/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
+++ b/compiler/ballerina-parser/src/main/resources/syntax_diagnostic_message.properties
@@ -312,3 +312,4 @@ error.field.binding.pattern.inside.list.binding.pattern=field binding pattern in
 error.invalid.expression.expected.a.call.expression=invalid expression, expected a call expression
 error.metadata.not.attached.to.a.top.level.construct=metadata not attached to a top level construct
 error.metadata.not.attached.to.a.object.member=metadata not attached to a object member
+error.typedesc.after.rest.descriptor=type descriptor not allowed after rest descriptor
