Fix table creation error

--- a/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
@@ -326,3 +326,51 @@ name = "riyafa"
 id = 144
 address.city="Madrid"
 address.country.name="Spain"
+
+[configStructuredTypes.lecturer]
+name="hinduja"
+department.name="IT"
+
+[configStructuredTypes.lawyer]
+name="riyafa"
+address.city="Colombo"
+
+[[configStructuredTypes.lecturerTable]]
+name="manu"
+department.name="IT"
+
+[[configStructuredTypes.lecturerTable]]
+name="waruna"
+department.name="IT"
+
+[[configStructuredTypes.lawyerTable]]
+name="gabilan"
+address.city="Colombo"
+
+[[configStructuredTypes.lawyerTable]]
+name="riyafa"
+address.city="Kandy"
+
+[configStructuredTypes.lecturer2]
+name="hinduja"
+department.name="IT"
+
+[configStructuredTypes.lawyer2]
+name="riyafa"
+place.city="Colombo"
+
+[[configStructuredTypes.lecturerTable2]]
+name="manu"
+department.name="IT"
+
+[[configStructuredTypes.lecturerTable2]]
+name="waruna"
+department.name="IT"
+
+[[configStructuredTypes.lawyerTable2]]
+name="gabilan"
+place.city="Colombo"
+
+[[configStructuredTypes.lawyerTable2]]
+name="riyafa"
+place.city="Kandy"
