--- a/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
@@ -310,9 +310,7 @@ address.city="New York"
 address.country.name="USA"
 
 [[configStructuredTypes.mod2.personArray2]]
-name = "waruna"[[person]]
-name = "Hinduja"
-address.city = "Colombo"
+name = "waruna"
 id = 1001
 address.city="London"
 address.country.name="UK"
