Add suggested changes

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -447,8 +447,8 @@ error.incompatible.types.conversion.with.suggestion=\
 error.unsafe.cast.attempt=\
   unsafe cast from ''{0}'' to ''{1}'', use multi-return cast expression
 
-error.unsafe.conversion.attempt=\
-  unsafe conversion from ''{0}'' to ''{1}'', use multi-return conversion expression
+error.implicit.numeric.conversions.not.allowed=\
+  implicit numeric conversion between ''{0}'' and ''{1}'' is not allowed 
 
 error.array.literal.not.allowed=\
   array literal not allowed here
