--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1721,13 +1721,17 @@ error.invalid.method.call.expr.on.field=\
   invalid method call expression: expected a function type, but found ''{0}''
 
 error.same.array.type.as.main.param=\
-   'main' function operand parameters can have only one array of type ''{0}''
+   'main' function can have at most one array parameter
 
 error.variable.and.array.type.as.main.param=\
-   'main' function operand parameter ''{0}'' of type ''{1}'' cannot follow array of type ''{2}''
+   'main' function cannot have operand parameter ''{0}'' of type ''{1}'' and array of type ''{2}'' together
 
 error.invalid.main.option.params.type=\
    'main' function option parameter ''{0}'' via included record ''{1}'' has invalid type ''{2}''
+
+error.optional.operand.precedes.operand=\
+   'main' function optional operand parameter ''{0}'' of type ''{1}'' cannot precede operand parameter ''{2}'' \
+  of type ''{3}''
 
 # hints
 hint.unnecessary.condition=\
