--- a/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configStructuredTypesProject/Config.toml
@@ -89,7 +89,6 @@ id=77
 name="riyafa"
 id=88
 
-
 [configStructuredTypes.farmer]
 name="waruna"
 id=999
@@ -178,10 +177,8 @@ id=100
 name="riyafa"
 id=105
 
-
 [configStructuredTypes.mod2.student]
 name="riyafa"
-
 
 [[configStructuredTypes.mod2.studentTable]]
 name="manu"
@@ -272,7 +269,6 @@ id=555
 name="hinduja"
 id=666
 
-
 [configStructuredTypes.mod2.person]
 name = "hinduja"
 id = 100
@@ -329,48 +325,68 @@ address.country.name="Spain"
 
 [configStructuredTypes.lecturer]
 name="hinduja"
-department.name="IT"
+department1.name="IT"
+department2.name="Finance"
+department3.name="HR"
 
 [configStructuredTypes.lawyer]
 name="riyafa"
-address.city="Colombo"
+address1.city="Colombo"
+address2.city="Kandy"
+address3.city="Galle"
 
 [[configStructuredTypes.lecturerTable]]
 name="manu"
-department.name="IT"
+department1.name="IT"
+department2.name="Sales"
+department3.name="HR"
 
 [[configStructuredTypes.lecturerTable]]
 name="waruna"
-department.name="IT"
+department1.name="IT"
+department3.name="HR"
 
 [[configStructuredTypes.lawyerTable]]
 name="gabilan"
-address.city="Colombo"
+address1.city="Colombo"
+address2.city="Kandy"
+address3.city="Galle"
 
 [[configStructuredTypes.lawyerTable]]
 name="riyafa"
-address.city="Kandy"
+address1.city="Matara"
+address3.city="Gampaha"
 
 [configStructuredTypes.lecturer2]
 name="hinduja"
-department.name="IT"
+department1.name="IT"
+department2.name="Finance"
+department3.name="HR"
 
 [configStructuredTypes.lawyer2]
 name="riyafa"
-place.city="Colombo"
+place1.city="Colombo"
+place2.city="Kandy"
+place3.city="Galle"
 
 [[configStructuredTypes.lecturerTable2]]
 name="manu"
-department.name="IT"
+department1.name="IT"
+department2.name="Sales"
+department3.name="HR"
 
 [[configStructuredTypes.lecturerTable2]]
 name="waruna"
-department.name="IT"
+department1.name="IT"
+department3.name="HR"
 
 [[configStructuredTypes.lawyerTable2]]
 name="gabilan"
-place.city="Colombo"
+place1.city="Colombo"
+place2.city="Kandy"
+place3.city="Galle"
 
 [[configStructuredTypes.lawyerTable2]]
 name="riyafa"
-place.city="Kandy"
+place1.city="Matara"
+place3.city="Jaffna"
