Add suggested changes

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1254,8 +1254,8 @@ error.invalid.variable.reference.in.binding.pattern=\
 error.invalid.type.for.rest.descriptor=\
   invalid rest descriptor type; expecting an array type but found ''{0}''
 
-error.invalid.variable.reference=\
-  invalid variable reference; missing variable
+error.cannot.assign.value.to.type.def=\
+  cannot assign a value to a type definition
 
 # safe navigation operator related errors
 
