Improve unimplemented referenced method diag

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -921,8 +921,8 @@ error.invalid.function.pointer.invocation=\
 error.invalid.default.param.value=\
   invalid value for parameter ''{0}'': only simple literals allowed
 
-error.abstract.object.constructor=\
-  abstract object ''{0}'' cannot have a constructor method
+error.illegal.init.method.in.object.type.descriptor=\
+  object type descriptor ''{0}'' cannot have an init method
 
 error.cannot.initialize.abstract.object=\
   cannot initialize abstract object ''{0}''
@@ -932,6 +932,12 @@ error.invalid.interface.of.non.abstract.object=\
 
 error.unimplemented.referenced.method.in.class=\
   no implementation found for the method ''{0}'' of class ''{1}''
+
+error.unimplemented.referenced.method.in.service.declaration=\
+  no implementation found for the method ''{0}'' of service declaration ''{1}''
+
+error.unimplemented.referenced.method.in.object.constructor=\
+  no implementation found for the method ''{0}'' of object constructor ''{1}''
 
 error.private.function.visibility=\
    function ''{0}'' can not have 'private' visibility
