--- a/docs/bir-spec/build.gradle
+++ b/docs/bir-spec/build.gradle
@@ -36,7 +36,7 @@ dependencies {
     implementation project(':ballerina-lang')
 
     implementation 'io.kaitai:kaitai-struct-runtime:0.8'
-    implementation 'org.wso2.orbit.org.yaml:snakeyaml:1.16.0.wso2v1'
+    implementation 'org.yaml:snakeyaml:1.24'
     implementation 'com.github.jknack:handlebars'
 
     testCompile 'org.testng:testng'
