--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1723,6 +1723,9 @@ error.invalid.iterable.completion.type.in.foreach.next.function=\
 error.invalid.method.call.expr.on.field=\
   invalid method call expression: expected a function type, but found ''{0}''
 
+error.incompatible.type.wait.future.expr.wait.field=\
+  incompatible types: expected ''{0}'', found eventual type ''{1}'' for wait future expression ''{2}''
+
 error.same.array.type.as.main.param=\
    'main' function can have at most one array parameter
 
