--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -360,8 +360,8 @@ error.worker.send.after.return=\
 error.worker.receive.after.return=\
   invalid worker receive statement position, can not be used after a non-error return
 
-error.invalid.worker.send.position=\
-  invalid worker send statement position, must be a top level statement in a worker
+error.unsupported.worker.send.position=\
+  worker send statement position not supported yet, must be a top level statement in a worker
 
 error.invalid.worker.receive.position=\
   invalid worker receive statement position, must be a top level statement in a worker
