Fix test caches in workflow

--- a/gradle/javaProject.gradle
+++ b/gradle/javaProject.gradle
@@ -171,6 +171,7 @@ spotbugsTest {
 }
 
 test {
+    outputs.upToDateWhen { false }
     testLogging {
         // Make sure output from standard out or error is shown in Gradle output.
         showStackTraces = true
