--- a/.github/workflows/CI_ubuntu.yml
+++ b/.github/workflows/CI_ubuntu.yml
@@ -26,18 +26,11 @@ jobs:
         with:
           java-version: 11
 
-      - name: Cache Gradle packages
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-${{ github.sha }}
-          restore-keys: ${{ runner.os }}-gradle
-
       - name: Build with Gradle
         run: |
           export DISPLAY=':99.0'
           /usr/bin/Xvfb :99 -screen 0 1024x768x24 > /dev/null 2>&1 &
-          ./gradlew build --max-workers=2 --scan --no-daemon
+          ./gradlew clean build --max-workers=2 --scan --no-daemon
           find ~/.gradle/caches/ -name "*.lock" -type f -delete
 
       - name: Generate Jacoco report
