Set configurable var type as immutable intersection

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1008,8 +1008,8 @@ error.referred.function.signature.mismatch=\
 error.configurable.variable.cannot.be.declared.with.var=\
   configurable variable cannot be declared with var
 
-error.configurable.variable.must.be.anydata.and.readonly=\
-  type of configurable variable must be anydata&readonly
+error.configurable.variable.must.be.anydata=\
+  type of configurable variable must be anydata
 
 error.only.simple.variables.are.allowed.to.be.configurable=\
   only simple variables are allowed to be configurable
@@ -1735,6 +1735,8 @@ error.invalid.main.option.params.type=\
 error.optional.operand.precedes.operand=\
    'main' function optional operand parameter ''{0}'' of type ''{1}'' cannot precede operand parameter ''{2}'' \
   of type ''{3}''
+error.invalid.configurable.type=\
+  invalid configurable type
 
 # hints
 hint.unnecessary.condition=\
