--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1736,6 +1736,9 @@ error.optional.operand.precedes.operand=\
    'main' function optional operand parameter ''{0}'' of type ''{1}'' cannot precede operand parameter ''{2}'' \
   of type ''{3}''
 
+error.unsupported.type.intersection=\
+  unsupported intersection ''{0}''
+
 # hints
 hint.unnecessary.condition=\
   unnecessary condition: expression will always evaluate to ''true''
