Improve method/remote method name collision diag

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1742,6 +1742,10 @@ error.optional.operand.precedes.operand=\
    'main' function optional operand parameter ''{0}'' of type ''{1}'' cannot precede operand parameter ''{2}'' \
   of type ''{3}''
 
+error.unsupported.remote.method.name.in.scope=\
+  declaration of remote method ''{0}'' while non remote method with the same name exist in the object type is \
+  not supported
+
 # hints
 hint.unnecessary.condition=\
   unnecessary condition: expression will always evaluate to ''true''
