--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1743,8 +1743,7 @@ error.optional.operand.precedes.operand=\
   of type ''{3}''
 
 error.unsupported.remote.method.name.in.scope=\
-  declaration of remote method ''{0}'' while non remote method with the same name exist in the object type is \
-  not supported
+  unsupported remote method name, ''{0}'' already exists as a method or field name in the object type
 
 # hints
 hint.unnecessary.condition=\
