Address review suggestions

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -1015,7 +1015,7 @@ error.configurable.variable.cannot.be.declared.with.var=\
   configurable variable cannot be declared with var
 
 error.configurable.variable.must.be.anydata=\
-  type of configurable variable must be anydata
+  invalid type for configurable variable: expected a subtype of ''anydata''
 
 error.only.simple.variables.are.allowed.to.be.configurable=\
   only simple variables are allowed to be configurable
@@ -1741,9 +1741,6 @@ error.invalid.main.option.params.type=\
 error.optional.operand.precedes.operand=\
    'main' function optional operand parameter ''{0}'' of type ''{1}'' cannot precede operand parameter ''{2}'' \
   of type ''{3}''
-
-error.invalid.configurable.type=\
-  invalid configurable type
 
 # hints
 hint.unnecessary.condition=\
