Address review suggestions

--- a/tests/jballerina-integration-test/src/test/resources/configurables/configUnionTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configUnionTypesProject/Config.toml
@@ -4,4 +4,4 @@ countryCode = "Sri Lanka"
 
 [configUnionTypes.mod2]
 httpVersion = "HTTP_2"
-countryCode = "United States of America"
+countryCode = "United States"
