--- a/tests/jballerina-integration-test/src/test/resources/configurables/configurableProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configurableProject/Config.toml
@@ -26,7 +26,7 @@ customType2Array = [[5,6],[7,8]]
 customType3DArray = [[[5,6],[7,8]],[[5,6],[7,8]]]
 
 color = "GREEN"
-countryCode = "United States of America"
+countryCode = "United States"
 
 [main.admin]
 username = "jack"
