Add tests for ls extensions

--- a/language-server/modules/langserver-core/src/test/resources/compiler_plugin_tests/package_comp_plugin_with_codeactions/Ballerina.toml
+++ b/language-server/modules/langserver-core/src/test/resources/compiler_plugin_tests/package_comp_plugin_with_codeactions/Ballerina.toml
@@ -1,7 +1,4 @@
-[[dependency]]
+[package]
 org = "lstest"
 name = "package_comp_plugin_with_codeactions"
 version = "0.1.0"
-repository = "local"
-
-
