--- a/language-server/modules/langserver-core/build.gradle
+++ b/language-server/modules/langserver-core/build.gradle
@@ -33,6 +33,9 @@ configurations {
     }
     libs
     distributionBala
+    compilerPluginJar {
+        transitive false
+    }
 }
 
 dependencies {
@@ -86,7 +89,11 @@ dependencies {
     dependency 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.10.0'
     dependency 'org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc:0.10.0'
     dependency 'commons-io:commons-io:2.6'
+
     testCompile 'org.testng:testng'
+    testCompile project(':ballerina-test-utils')
+
+    compilerPluginJar project(':project-api-test-artifact:compiler-plugin-with-codeactions')
 }
 
 description = 'Ballerina - Language server - Core'
@@ -121,7 +128,13 @@ createJavadoc {
     exclude "**"
 }
 
+task copyCompilerPluginJars(type: Copy) {
+    from configurations.compilerPluginJar
+    into "$buildDir/compiler-plugin-jars"
+}
+
 test {
+    dependsOn copyCompilerPluginJars
     dependsOn loadDistributionCache
     systemProperty "ballerina.home", "$buildDir/"
     systemProperty "experimental", "true"
