Update observability tests

--- a/tests/jballerina-integration-test/src/test/resources/observability/metrics_tests/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/observability/metrics_tests/Config.toml
@@ -1,3 +1,5 @@
 [ballerina.observe]
-metricsEnabled=true    # Flag to enable Metrics
-metricsReporter="mock"
+enabled=true
+
+[ballerina.observe.metrics]
+reporter="prometheus"
