--- a/tests/jballerina-integration-test/src/test/resources/observability/tracing_tests/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/observability/tracing_tests/Config.toml
@@ -1,3 +1,5 @@
 [ballerina.observe]
-tracingEnabled=true    # Flag to enable Metrics
-tracingProvider="mock"
+enabled=true
+
+[ballerina.observe.tracing]
+provider="jaeger"
