--- a/build.gradle
+++ b/build.gradle
@@ -33,12 +33,14 @@ subprojects {
             }
         }
         repositories {
-            maven {
-                name = "GitHubPackages"
-                url = uri("https://maven.pkg.github.com/ballerina-platform/ballerina-lang")
-                credentials {
-                    username System.getenv("packageUser")
-                    password System.getenv("packagePAT")
+            if (System.getenv("isRelease") == "true") {
+                maven {
+                    name = "GitHubPackages"
+                    url = uri("https://maven.pkg.github.com/kaneeldias/ballerina-lang")
+                    credentials {
+                        username System.getenv("packageUser")
+                        password System.getenv("packagePAT")
+                    }
                 }
             }
         }
