--- a/.github/workflows/publish_timestamped_release.yml
+++ b/.github/workflows/publish_timestamped_release.yml
@@ -36,6 +36,7 @@ jobs:
           env:
             packageUser: ${{ secrets.BALLERINA_BOT_USERNAME }}
             packagePAT: ${{ secrets.BALLERINA_BOT_TOKEN }}
+            isRelease: "true"
           run: |
             ./gradlew clean build publish -x createJavadoc --scan --continue --rerun-tasks
             ./gradlew createCodeCoverageReport
