--- a/tests/jballerina-integration-test/src/test/resources/configurables/configUnionTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configUnionTypesProject/Config.toml
@@ -1,7 +1,15 @@
 [configUnionTypes]
 httpVersion = "HTTP_1_1"
 countryCode = "Sri Lanka"
+[configUnionTypes.httpResponse]
+httpVersion = "HTTP_2"
+[configUnionTypes.country]
+countryCode = "United States"
 
 [configUnionTypes.mod2]
 httpVersion = "HTTP_2"
 countryCode = "United States"
+[configUnionTypes.mod2.httpResponse]
+httpVersion = "HTTP_1"
+[configUnionTypes.mod2.country]
+countryCode = "Sri Lanka"
