Add tests for configure enum array

--- a/tests/jballerina-integration-test/src/test/resources/configurables/configUnionTypesProject/Config.toml
+++ b/tests/jballerina-integration-test/src/test/resources/configurables/configUnionTypesProject/Config.toml
@@ -1,6 +1,7 @@
 [configUnionTypes]
 httpVersion = "HTTP_1_1"
 countryCode = "Sri Lanka"
+countryCodes = ["United States","Sri Lanka"]
 [configUnionTypes.httpResponse]
 httpVersion = "HTTP_2"
 [configUnionTypes.country]
@@ -9,6 +10,7 @@ countryCode = "United States"
 [configUnionTypes.mod2]
 httpVersion = "HTTP_2"
 countryCode = "United States"
+countryCodes = ["Sri Lanka", "United States"]
 [configUnionTypes.mod2.httpResponse]
 httpVersion = "HTTP_1_1"
 [configUnionTypes.mod2.country]
