Fix stackoverflow issue in data mapper plugin when cyclic module dependencies are used

--- a/compiler/ballerina-lang/src/main/resources/compiler.properties
+++ b/compiler/ballerina-lang/src/main/resources/compiler.properties
@@ -83,6 +83,9 @@ warning.non.module.qualified.error.reason=\
 warning.compiler.plugin.crashed=\
   compiler plugin crashed
 
+warning.compiler.plugin.failed=\
+  compiler plugin ''{0}'' failed
+
 # -------------------------
 # Compiler error messages
 # -------------------------
